# NEA

./: .gitignore  50ns-0.75ec-100te-5cg-50rt  50ns-1.41ec-100te-5cg-50rt  50ns-2ec-100te-5cg-50rt  Edgar NEA tex.aux  Edgar NEA tex.out  Edgar NEA tex.synctex(busy)  Edgar NEA tex.tex  Edgar NEA tex.toc  NEA Activity List.docx  README.md  pyproject.toml
CODE/: CheckersGamePvP.py  MCTS.py  MCTSSelfPlay.py  PvMCTS.py  TicTacToe.py  consts.py  testing.py
CODE/ConsoleCheckers/: Checkers.py  CheckersGame.py  __init__.py  checkers copy.py
CODE/MCTS/: MCTS.py  __init__.py
CODE/console_checkers/: __init__.py  checkers.py  consts.py
CODE/funcs/: __init__.py  correlate.py  test.py
CODE/game/: consts.py  game.py
CODE/pygamecheckers/: __init__.py  consts.py  game.py
LaTex/: Edgar NEA tex.aux  Edgar NEA tex.fdb_latexmk  Edgar NEA tex.fls  Edgar NEA tex.maf  Edgar NEA tex.out  Edgar NEA tex.pytxcode  Edgar NEA tex.stc1  Edgar NEA tex.stc2  Edgar NEA tex.stc3  Edgar NEA tex.stc4  Edgar NEA tex.stc5  Edgar NEA tex.stc6  Edgar NEA tex.synctex(busy)  Edgar NEA tex.tex  Edgar NEA tex.toc
LaTex/_minted-Edgar_NEA_tex/: 00E17651A27F9C2E2DE5A0D173FBFB12886D1AEF2646E60CFEBC4A48B74DA70B.pygtex  012638395EBE3C759B1CA5202E87BC53886D1AEF2646E60CFEBC4A48B74DA70B.pygtex  (+31 more)
codev2/: CheckersGamePvP.py
nea/: 50ns-0.75ec-100te-5cg-60rt  50ns-1.41ec-500te-5cg-60rt  AgentvsAgent.py  AlphaMCTSSelfPlay.py  AlphaModel.py  CheckersGamePvP.py  CheckersGuiGame.py  MCTSSelfPlay.py  PvMCTS.py  TestMNIST.ipynb  TestMNIST.py  TestNN.py  TestNNXOR.py  TrainAgent.py  parametercombinations
(+55 files in other folders)
