[tool.poetry]
name = "nea"
version = "0.1.0"
description = ""
authors = ["Edgar Maddocks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
tqdm = "^4.66.5"
numba = "^0.60.0"
pytest = "^8.3.2"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
